- Refactor: Use `getFirst` and `getLast` for point retrieval in `TransportModeService` - Update `inferTransportMode` to accept trip points in `TripDetectionService`